# ygm

./: CMakeLists.txt  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-pdf-docs.yaml  ci-test-macos.yaml  ci-test.yaml
cmake/: FindArrowParquet.cmake
examples/io/: parquet_reader.cpp
include/ygm/: comm.hpp  progress_indicator.hpp  utility.hpp  version.hpp
include/ygm/container/: array.hpp  bag.hpp  counting_set.hpp  map.hpp  set.hpp  tagged_bag.hpp
include/ygm/container/detail/: base_async_contains.hpp  base_async_erase.hpp  base_async_insert.hpp  base_async_insert_contains.hpp  base_async_insert_or_assign.hpp  base_async_reduce.hpp  base_async_visit.hpp  base_batch_erase.hpp  base_count.hpp  base_iteration.hpp  base_iterators.hpp  base_misc.hpp  block_partitioner.hpp  disjoint_set_impl.hpp  flatten_proxy.hpp  hash_partitioner.hpp  reducing_adapter.hpp  round_robin_partitioner.hpp  transform_proxy.hpp  type_traits.hpp
include/ygm/detail/: assert.hpp  cereal_boost_container.hpp  cereal_boost_json.hpp  collective.hpp  comm.ipp  comm_environment.hpp  interrupt_mask.hpp  lambda_compliance.hpp  logger.hpp  mpi.hpp  tracer.hpp  ygm_cereal_archive.hpp  ygm_ptr.hpp
include/ygm/detail/meta/: functional.hpp
include/ygm/io/: csv_parser.hpp  daily_output.hpp  line_parser.hpp  multi_output.hpp  ndjson_parser.hpp  parquet_parser.hpp
include/ygm/io/detail/: csv.hpp
include/ygm/utility/: boost_static_string.hpp  timer.hpp
test/: CMakeLists.txt  test_array.cpp  test_bag.cpp  test_barrier.cpp  test_boost_string.cpp  test_cereal_boost_container.cpp  test_cereal_boost_json.cpp  test_collective.cpp  test_comm.cpp  test_counting_set.cpp  test_csv_parser.cpp  test_daily_output.cpp  test_layout.cpp  test_logger.cpp  test_map.cpp  test_multi_output.cpp  test_multimap.cpp  test_multiset.cpp  test_ndjson_parser.cpp  test_parquet_reader.cpp  test_progress_indicator.cpp  test_random.cpp  test_recursion_large_messages.cpp  test_recursion_progress.cpp  test_reduce_by_key.cpp  test_set.cpp
tools/: CMakeLists.txt  parquet_tools.cpp  parquet_tools_subcmd.json  read_trace.cpp
